[gd_scene load_steps=2 format=3 uid="uid://54q6c8oc6k81"]

[ext_resource type="Script" path="res://Overlap/Vunerable.gd" id="1"]

[node name="Vunerable" type="Area3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Vunerable_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Vunerable_body_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_Vunerable_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Vunerable_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
